# smb-ad-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF_TRAINING.md  README.md  SUBMISSION.md  TEAMMATE_TRAINING_GUIDE.md  TRAINING_RUNBOOK.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
docs/: HF_BLOG.md  HF_MODEL_CARD.md  PITCH_DECK_OUTLINE.md
frontend/: .env.example  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/about/: page.tsx
frontend/app/api/login/: route.ts
frontend/app/login/: page.tsx
frontend/components/: animated-counter.tsx  fade-in.tsx  haptic-provider.tsx  navbar.tsx
frontend/lib/: api.ts  auth.ts  trajectories.ts  utils.ts
frontend/public/trajectories/: fitness.json  food.json  skincare.json
notebooks/: train_smb_ads.ipynb
scripts/: deploy.sh
src/smb_ads/: __init__.py  agent.py  env.py  marketing_api.py  models.py  openenv_compat.py  policy.py  policy_drift.py  rewards.py  scenarios.py  state.py  user_model.py
tests/: test_agent.py  test_integration.py  test_marketing_api.py  test_rewards.py  test_smoke.py  test_world_sim.py
training/: DGX_DOCKER_QUICKSTART.md  DGX_RUN.md  README.md  generate_sft_data.py  grpo_dgx.py  requirements-dgx.txt  requirements-training-nounsloth.txt  requirements-training.txt  sft_data.jsonl  sft_dgx.py  sft_warm_start.py  sft_warm_start_nounsloth.py  train_grpo.py  train_grpo_3b_v2.py  train_grpo_nounsloth.py  train_grpo_vanilla.py
(+5 files in other folders)
